--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 .headWrapper{
     margin : auto;
     display : flex;
+    justify-content: center;
     background : rgb(14, 77, 146);
     padding: 5rem;
     color : rgb(255,255,255);
@@ -23,39 +24,57 @@
 }
 
 .headWrapper div {
-    margin: 0.5rem;
+    margin: 0.2rem;
     padding: 0.2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background: #2b2b3a;
-    flex: 1;
 }
 
 .headWrapper div label{
-    margin : 1rem;
-    padding-left: 1rem;
+    margin : 0.5rem;
+    padding-left : 1rem;
 }
 
 .headWrapper div input{
-    margin : 1rem;
-    padding: 10px;
-    background: rgb(244,251,183);
-    flex-basis : 1 0 1;
+    margin : 0.5rem;
+    padding : 10px;
+    background : rgb(244,251,183);
+}
+
+.headWrapper .bg-div p{
+    text-align : center;
+    font-weight : 700;
+    padding-top : 1rem;
 }
 
 .headWrapper .bg-div div{
     display : flex;
+    flex-direction : row;
     background : green;
+}
+
+.headWrapper .border-font-color div{
+    background : #00a86b;
+    display: flex;
+    align-items: center;
+}
+
+.btn-wrapper{
+    display : flex;
+    justify-content: center;
 }
 
 .generateBtn{
     height : 3rem;
-    align-self: flex-end;
-    margin-bottom : 2rem;
-    padding: 1rem;
+    margin: 2rem auto;
+    padding : 1rem;
     font-size : 1rem;
-    font-family: 'Courier New', Courier, monospace;
+    font-family : 'Courier New', Courier, monospace;
+    background : #cc6666;
+    color : white;
+    border-radius: 10px;
 }
 
 .table-wrapper{
@@ -66,11 +85,11 @@
 table{
     width : 80%;
     border : grey 2px solid;
-    margin: auto;
+    margin : auto;
 }
 
 thead{
-    height: 2rem;
+    height : 2rem;
 }
 
 tr{
@@ -84,7 +103,7 @@ th{
 }
 
 tbody{
-    border: orange 1px solid;
+    border : orange 1px solid;
 }
 
 td{
