--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 
 .headWrapper div {
     margin: 0.2rem;
-    padding: 0.2rem;
+    padding: 0.5rem;
     display: flex;
     flex-direction: column;
     flex-wrap : wrap;
@@ -41,13 +41,16 @@
 
 .headWrapper div input{
     margin : 0.5rem;
+    height: 2rem;
     background-Color : rgb(244,251,183);
+    font-size : 16px;
 }
 
 .headWrapper .bg-div p{
     text-align : center;
     font-weight : 700;
     padding-top : 1rem;
+    padding-bottom : 1rem;
 }
 
 .headWrapper .bg-div div{
@@ -62,6 +65,11 @@
     display: flex;
     flex-wrap : wrap;
     align-items: center;
+}
+
+.selectsFont select{
+    height: 2rem;
+    font-size : 16px;
 }
 
 .btn-wrapper{
